# voice-chat

./: .env.example  .gitignore  README.md  pyproject.toml
asr/: main.py
llm/: main.py
tts/: clone.py  main.py
vchat/: main.py
vclient/: main.py
